--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,42 +1,59 @@
-#root {
+/* #root {
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
+} */
+
+body,
+html {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  background-color: #fff;
+  color: #333;
+  overflow: hidden;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.app-container {
+  /* width: 100vw;
+  min-height: 100vh; */
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: stretch;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+/* Navbar styles */
+.navbar {
+  background-color: #3498db; /* Blue shade that matches button colors */
+  padding: 10px 20px;
+  padding-right: 50px;
+  display: flex;
+  justify-content: right;
+  align-items: center;
+  color: white;
+  width: 100%;
+  height: 60px;
+}
+.sign-in-container {
+  margin-top: 300px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.sign-in-container button {
+  margin: 10px;
 }
 
-.card {
-  padding: 2em;
+.navbar a {
+  color: white; /* Ensures links are white */
+  text-decoration: none;
+  margin-right: 20px;
+  font-weight: bold;
+  transition: color 0.3s;
 }
 
-.read-the-docs {
-  color: #888;
+.navbar a:hover {
+  color: #e0e0e0; /* Light grey for hover effect */
 }
