--- a/client/src/App.css
+++ b/client/src/App.css
@@ -13,47 +13,17 @@ html {
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   background-color: #fff;
   color: #333;
-  overflow: hidden;
+  /* overflow: hidden; */
 }
 
 .app-container {
-  /* width: 100vw;
-  min-height: 100vh; */
-  height: 100%;
+  padding-top: 60px;   /* equal to navbar height */
+  padding-bottom: 50px; /* equal to footer height */
+  height: calc(100vh - 11rem); /* fill remaining height */
+  overflow-y: auto;
   display: flex;
   justify-content: center;
   flex-direction: column;
   align-items: stretch;
 }
 
-/* Navbar styles */
-.navbar {
-  background-color: #3498db; /* Blue shade that matches button colors */
-  padding: 10px 20px;
-  padding-right: 50px;
-  display: flex;
-  justify-content: right;
-  align-items: center;
-  color: white;
-  width: 100%;
-  height: 60px;
-}
-.sign-in-container {
-  margin-top: 300px;
-}
-
-.sign-in-container button {
-  margin: 10px;
-}
-
-.navbar a {
-  color: white; /* Ensures links are white */
-  text-decoration: none;
-  margin-right: 20px;
-  font-weight: bold;
-  transition: color 0.3s;
-}
-
-.navbar a:hover {
-  color: #e0e0e0; /* Light grey for hover effect */
-}
