--- a/client/src/components/Expense/ExpenseTable.css
+++ b/client/src/components/Expense/ExpenseTable.css
@@ -82,6 +82,10 @@
   background-color: #f5f5f5;
 }
 
+.expense-table-header{
+cursor: pointer;
+}
+
 .expense-table tbody tr:hover {
   background-color: #f9f9f9;
 }
